--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.javaguru</groupId>
-    <artifactId>todolist</artifactId>
+    <artifactId>shoppinglist</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>todo-list</name>
+    <name>shoppinglist</name>
     <description>Shopping list</description>
 
     <properties>
