--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-jdbc.url=jdbc:mysql://localhost:3306/todolist
-driverClass=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/productList
+driverClass=com.mysql.cj.jdbc.Driver
+#driverClass=com.mysql.jdbc.Driver
 database.user.name=root
 database.user.password=Zgxvgvzn25
-spring.profiles.active=inmemorydb  // local
+spring.profiles.active=local
