--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:mysql://localhost:3306/productList
+jdbc.url=jdbc:mysql://localhost:3306/productList?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 driverClass=com.mysql.cj.jdbc.Driver
 database.user.name=root
 database.user.password=Zgxvgvzn25
